@@ -2,6 +2,11 @@ After CMF 1.5.7
 
   Bug Fixes
 
+    - Fixed DST-driven test breakage in CMFCalendar by adding an optional
+      'zone' argument to the DublineCore methods which return string
+      rednitions of date metadata.
+      (http://www.zope.org/Collectors/CMF/476)
+
     - Fixed broken PUT handling for CMFCalendar Events
       (http://www.zope.org/Collectors/CMF/458)
 
